# the-hodlers-dilemna

./: .env.example  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  railway.json  tsconfig.json  vercel.json
.github/workflows/: deploy-pages.yml
app/: broadcast.css  globals.css  layout.tsx  page.tsx
app/docs/: page.tsx
app/leaderboard/: page.tsx
app/play/: page.tsx
app/rules/: page.tsx
components/: dilemma-preloader.tsx  docs-experience.tsx  footer-banner.tsx  holders-dilemma.tsx  home-show.tsx  home-spectator-board.tsx  launch-links.tsx  protocol-console.tsx  public-leaderboard-board.tsx  round-history-board.tsx  rules-experience.tsx  section-heading.tsx  show-brand.tsx  solana-wallet-provider.tsx  use-banker-feed.ts  use-dilemma-feed.ts  use-public-leaderboard.ts  wallet-connect.tsx
docs/: INCIDENT_RUNBOOK.md  POSTMORTEM-2026-07-21.md
lib/: experiment-data.ts  protocol-api.ts  protocol-simulation.ts
programs/holders_dilemna/: Cargo.toml
programs/holders_dilemna/src/: lib.rs
railway/: .env.example  package.json  pnpm-lock.yaml  railway.toml
railway/src/: bootstrap-devnet.ts  index.ts  keypairs.ts
railway/test/: keypairs.test.ts
scripts/: preflight.mjs  scan-secrets.mjs
supabase/: schema.sql
tests/: protocol-api-url.test.mts
