[package]
name = "holders-dilemna"
version = "0.1.0"
description = "Legacy experimental program source for Holders Dilemma"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "holders_dilemna"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.1.2", features = ["token_2022"] }
